* fixed iOS zoom issue by expanding HTML viewport rules
* changed Advanced Free Known figure A again according CIVA change
* removed 2018.1.3 update message because of figure A changing back
* updated all 7.8.21-22 figures again with emphasis on center part
* added options for hidden loop start/exit in figures.js

2018.2.1
* fixed spin symbol shown in figure chooser for tailslides
* corrected 2018 France rules
* fixed US National logo not showing correctly in chooser
* updated all 7.8.21-22 figures to show which loop comes first (different from Aresti!)
* added Location to form L & R
* added switch to select Notes print to Sequence Info
* added "File name" text to Sequence Info
* changed all css use of "rem" to "px"
* removed "OpenAero - " from start of filename when saving forms

2018.2
* adjusted figure editing handles to maintain size in phone layout
* added option to add Sequence Info at top of Grid print (Issue #208)
* changed figures18.js and logic to define which roll positions can have spins
* changed figure chooser to show all possible roll positions
* corrected drawing of 7.8.21.3-4
* corrected coding and drawing of 7.8.22.1-4
* changed Designer free Figure String to Material design
* fixed caret jumping to end when editing Figure String on iOS
* changed rule Alert to "exactly" when min and max are the same in rules
* increased size of Notes text on printed forms
* changed insertRule code for fuDesigner CSS to update inline style in index.html
* fixed figure jumping on reposition in Microsoft Edge
* fixed iOS scroll bug (mostly) by adding {passive: false} to handleTouchMove
* fixed "Exit Designer" menu icon position
* fixed Figure String disappearing in figure selector on iOS

2018.1.9
* Cordova: merged Save and Email sequence to Save/share sequence
* improved sending sequence on iOS Cordova
* updated Figure Editor Comments look
* added installation message and update banner for download installs (not recommended)