@@ -1024,7 +1024,7 @@
 						<label>
 							<span class="userText" id="t_maxScaling"></span>
 							<span id="maxScalingSpan" class="form-group">
-								<input type="number" step="10" min="100" value="300" id="maxScaling"><i class="bar"></i>
+								<input type="number" step="1" min="100" value="300" id="maxScaling"><i class="bar"></i>
 							</span>
 						</label>
 					</div>
@@ -1038,21 +1038,21 @@
 								<label>
 									<span class="userText" id="t_imageWidth"></span>
 									<span class="form-group">
-                    <input type="number" step="10" value="800" id="imageWidth">
+                    <input type="number" step="1" value="800" id="imageWidth">
                     <i class="bar"></i>
                   </span>
 								</label>
 								<label>
 									<span class="userText" id="t_imageHeight"></span>
 									<span class="form-group">
-                    <input type="number" step="10" value="1130" id="imageHeight">
+                    <input type="number" step="1" value="1130" id="imageHeight">
                     <i class="bar"></i>
                   </span>
 								</label>
 								<label>
 									<span class="userText" id="t_pageSpacing"></span>
 									<span class="form-group">
-                    <input type="number" step="10" value="40" id="pageSpacing">
+                    <input type="number" step="1" value="40" id="pageSpacing">
                     <i class="bar"></i>
                   </span>
 								</label>
