@@ -5,6 +5,7 @@
 * removed 2018.1.3 update message because of figure A changing back
 * updated all 7.8.21-22 figures again with emphasis on center part
 * added options for hidden loop start/exit in figures.js
+* removed "step=10" for several input fields to prevent field from becoming empty
 
 2018.2.1
 * fixed spin symbol shown in figure chooser for tailslides
